# FLayer

./: .gitignore  AGENTS.md  CHECKPOINTS.md  README.md  feature_list.json  init.sh  opencode.json  project_state.md  skills-lock.json
src/: .env.example  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 001_create_orders_tables.py  002_create_order_statuses.py  003_add_status_fk_to_orders.py  004_create_stock_tables.py  005_add_filament_brand_and_settings.py  006_update_filament_unique_constraint.py  007_create_budgets_table.py  008_add_manual_grams_to_budgets.py  009_update_order_statuses.py  010_drop_budget_status_columns.py
src/backend/: config.py  database.py  main.py
src/backend/api/: auth.py  budget.py  deps.py  order_status.py  orders.py  stock.py
src/backend/models/: __init__.py  budget.py  customer.py  filament.py  order.py  order_status.py  otp_code.py  stock_movement.py  supply.py  user.py
src/backend/schemas/: auth.py  budget.py  order.py  order_status.py  stock.py
src/backend/scripts/: seed.py
src/backend/services/: budget_service.py  email_service.py  stock_service.py
src/frontend/: package.json  pnpm-lock.yaml
src/frontend/src/app/: api.ts  layout.tsx  (+5 more)
src/tests/: conftest.py
src/tests/factories/: __init__.py  customer_factory.py  order_factory.py  schema_factories.py  stock_factories.py  user_factory.py
src/tests/fixtures/: auth.py  customers.py  orders.py  stock.py  users.py
src/tests/integration/: test_auth.py  test_budget.py  test_order_status.py  test_orders.py  test_stock.py
(+53 files in other folders)
